# cybersin

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cybersin-spec.md
.github/workflows/: ci.yml
crates/cybersin-adapter/: Cargo.toml  build.rs
crates/cybersin-adapter/proto/: adapter.proto
crates/cybersin-adapter/src/: channel.rs  daemon_double.rs  lib.rs  messages.rs  pb.rs  stub_harness.rs
crates/cybersin-adapter/src/transport/: grpc.rs  mod.rs  stdio.rs
crates/cybersin-adapter/tests/: conformance.rs
crates/cybersin-backends/: Cargo.toml
crates/cybersin-backends/src/: lib.rs
crates/cybersin-cli/: Cargo.toml
crates/cybersin-cli/src/: git.rs  main.rs
crates/cybersin-cli/src/commands/: approval.rs  build.rs  check.rs  cost.rs  daemon.rs  diff.rs  dlq.rs  eval.rs  explain.rs  fmt.rs  init.rs  mod.rs  notify.rs  optimize.rs  run.rs  sandbox.rs  sessions.rs  trace.rs
crates/cybersin-cli/tests/: cli.rs  eval_cli.rs  explain_cli.rs  gateway_cli.rs  ic1_fixture.rs  ic2_runtime.rs  ic3_execution_semantics.rs  ic4_orchestration.rs  ic5_full_system.rs  sandbox_cli.rs  stub_run_end_to_end.rs
crates/cybersin-frontend/: Cargo.toml
crates/cybersin-frontend/src/: error.rs  fmt.rs  include.rs  ir.rs  lib.rs  raw.rs  template.rs  typecheck.rs  types.rs
crates/cybersin-gateway/: Cargo.toml
crates/cybersin-gateway/src/: error.rs  executor.rs  gateway.rs  lib.rs  policy.rs  retry.rs  schema.rs
crates/cybersin-gateway/tests/: scenarios.rs
crates/cybersin-ir/: Cargo.toml
crates/cybersin-ir/src/: budget.rs  lib.rs  prompt.rs
crates/cybersin-passes/: Cargo.toml
crates/cybersin-passes/src/: budget.rs  compress.rs  dedupe.rs  lib.rs  lint.rs  lint_fast.rs  reorder.rs
crates/cybersin-passes/tests/: pipeline.rs
crates/cybersin-passes/tests/fixtures/: compress.json
crates/cybersin-router/: Cargo.toml
crates/cybersin-router/src/: lib.rs
crates/cybersin-runtime/: Cargo.toml
crates/cybersin-runtime/src/: allowlist.rs  budget.rs  daemon.rs  dist.rs  error.rs  lib.rs  live_model_caller.rs  model_caller.rs  orchestration.rs  pg_storage.rs  route_executor.rs  sandbox_executor.rs  session.rs  storage.rs  stub_agent.rs  supervisor.rs
crates/cybersin-runtime/tests/: budget_and_approval.rs  postgres_parity.rs  sandbox_checkpoint.rs
crates/cybersin-sandbox/: Cargo.toml
crates/cybersin-sandbox/src/: lib.rs
crates/cybersin-sandbox/tests/: backend.rs  live_containment.rs  workspace.rs
crates/cybersin-trace/: Cargo.toml
crates/cybersin-trace/src/: cost.rs  lib.rs  span.rs  store.rs
docs/: sqlite-vec-evaluation.md
fixtures/ic1-research-team/: README.md  cybersin.yaml
fixtures/ic1-research-team/agents/: research-team.agent.yaml
fixtures/ic1-research-team/evals/: researcher.eval.yaml
fixtures/ic1-research-team/fragments/: research-principles.md
fixtures/ic1-research-team/fragments/schemas/: report.json
fixtures/ic1-research-team/prompts/: researcher.prompt.yaml  synthesizer.prompt.yaml
