[package]
name = "cybersin-adapter"
version = "0.1.0"
edition.workspace = true
description = "Harness<->daemon adapter protocol v0: message types, stdio and gRPC transports, conformance scenarios (spec §10)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "io-std", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = "0.12"
prost = "0.13"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "process"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
