[package]
name = "cybersin-cli"
version.workspace = true
edition.workspace = true
description = "The `cybersin` binary: clap commands (this issue: run --stub, trace ls|show, cost --by) + ratatui views (later issue)."

[[bin]]
name = "cybersin"
path = "src/main.rs"

[dependencies]
cybersin-adapter = { path = "../cybersin-adapter" }
cybersin-ir = { path = "../cybersin-ir" }
cybersin-runtime = { path = "../cybersin-runtime" }
cybersin-trace = { path = "../cybersin-trace" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
