[package]
name = "cybersin-cli"
version.workspace = true
edition.workspace = true
description = "The `cybersin` binary: clap commands (run --stub, trace ls|show, cost --by, dlq ls|show|retry|drop, approve/deny) + ratatui views (later issue)."

[[bin]]
name = "cybersin"
path = "src/main.rs"

[dependencies]
cybersin-frontend = { path = "../cybersin-frontend" }
cybersin-adapter = { path = "../cybersin-adapter" }
cybersin-gateway = { path = "../cybersin-gateway" }
cybersin-ir = { path = "../cybersin-ir" }
cybersin-passes = { path = "../cybersin-passes" }
cybersin-runtime = { path = "../cybersin-runtime" }
cybersin-trace = { path = "../cybersin-trace" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
