[package]
name = "cybersin-gateway"
version.workspace = true
edition.workspace = true
description = "The idempotent tool gateway (spec §8.2): schema validation, the tool_calls idempotency ledger, retry classes, dead-letter queue, and approval gates."

[dependencies]
cybersin-adapter = { path = "../cybersin-adapter" }
cybersin-runtime = { path = "../cybersin-runtime" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
