[package]
name = "cybersin-runtime"
version.workspace = true
edition.workspace = true
description = "cybersind daemon skeleton (spec §8): Storage trait + SQLite impl, event-sourced session loop, stub agent driven against a hand-written dist/ fixture, recording real spans into cybersin-trace."

[dependencies]
cybersin-adapter = { path = "../cybersin-adapter" }
cybersin-ir = { path = "../cybersin-ir" }
cybersin-trace = { path = "../cybersin-trace" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = [
    "postgres",
    "sqlite",
    "runtime-tokio",
    "macros",
] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

[dev-dependencies]
tempfile = "3"
