[package]
name = "cybersin-runtime"
version.workspace = true
edition.workspace = true
description = "cybersind daemon skeleton (spec §8): Storage trait + SQLite impl, event-sourced session loop, stub agent driven against a hand-written dist/ fixture, recording real spans into cybersin-trace."

[dependencies]
cybersin-adapter = { path = "../cybersin-adapter" }
cybersin-ir = { path = "../cybersin-ir" }
cybersin-router = { path = "../cybersin-router" }
cybersin-sandbox = { path = "../cybersin-sandbox" }
cybersin-trace = { path = "../cybersin-trace" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = [
    "postgres",
    "sqlite",
    "runtime-tokio",
    "macros",
] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

[dev-dependencies]
tempfile = "3"
# Dev-only, and deliberately the reverse of this crate's normal
# dependency direction (cybersin-gateway depends on cybersin-runtime):
# cargo explicitly supports this cycle for dev-dependencies (the lib
# target builds first, then feeds cybersin-gateway, then both feed this
# crate's own test binaries). Used so this issue's approval-parking tests
# can drive real `ToolGateway::approve`/`deny` against ledger rows
# `RuntimeDaemon` itself parked — proving `cybersin approve <call-id>`
# (which is exactly `ToolGateway::approve`, see cybersin-cli's
# `commands::approval`) actually resumes them, without duplicating that
# logic by hand in a test-only stand-in.
cybersin-gateway = { path = "../cybersin-gateway" }
